# qq-agent

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/qq_agent/: __init__.py  agent_runtime.py  anti_risk.py  audit_logger.py  llm_client.py  main.py  meme_generator.py  memory_store.py  qq_bot.py  recall_store.py
tests/: test_chat_command.py  test_meme_command.py  test_meme_generator.py  test_monitor_group_command.py  test_recall_notify.py  test_recall_store.py
