[project]
name = "agent-new"
version = "0.1.0"
description = "Isolated new project under agent root."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "openai>=2.31.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
